--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "test": "node ./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "async": "^3.1.0",
-    "bitcoin-core": "^2.0.0",
+    "async": "^3.2.4",
+    "bitcoin-core": "^3.1.0",
     "bitcoin-node-api": "git+http://git@github.com/uaktags/Bitcoin-Node-Api.git",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "debug": "~4.1.1",
-    "express": "~4.17.1",
+    "express": "^4.17.3",
     "intl": "^1.2.5",
     "jsonminify": "0.2.3",
-    "jstransformer-markdown-it": "^2.1.0",
-    "mongodb": "^3.4.1",
-    "mongoose": "5.7.7",
+    "jstransformer-markdown-it": "^3.0.0",
+    "mongodb": "^3.7.3",
+    "mongoose": "5.13.15",
     "morgan": "~1.9.1",
-    "pug": "^2.0.3",
+    "pug": "^3.0.1",
     "qr-image": "~2.0.0",
     "request": "^2.88.0",
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
-    "jasmine": "^3.5.0"
+    "jasmine": "^3.99.0"
   }
 }
